# simple-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.py  server.py
src/: server.py
src/services/: read_file.py
